# ozzylogic-test-task

./: CMakeLists.txt  editabletreeview.cpp  editabletreeview.h  editformdialog.cpp  editformdialog.h  mainwindow.cpp  mainwindow.h  sqltreemodel.cpp  sqltreemodel.h  treemodel.cpp  treemodel.h  widget.ui
delegates/: operatordelegate.cpp  operatordelegate.h
